--- a/index.html
+++ b/index.html
@@ -467,7 +467,35 @@
                 </div>
             </div>
         </section>
+        <!-- <section class="domenii-de-studiu">
+            <section class="domeniu-first-section">
+                <div class="domeniu-program">
+                    <h2>Programul nostru</h2>
+                    <img src="poze/image-bee.png" alt="">
+                </div>
+                <div class="domeniu-text">
+                    <h2>Domenii de studiu:</h2>
+                    <p>Procesul instructiv educativ are la baza urmatoarele domenii experentiale propuse prin curriculum national:</p>
+                </div>
 
+                <div class="tabel-domenii">
+                    <div class="container-comunicare">
+                        <div class="aux-comunicare">
+                            <span class="comunicare-img">
+                                <img src="poze/ursulet.png" alt="">
+                            </span>
+                            <div class="titlu-comunicare">
+                                <h2>Domeniul Limba si Comunicare</h2>
+                            </div>
+                        </div>
+                        <div class="text-comunicare">
+                            <p>Are ca scop principal dezvoltarea capacităţii de exprimare orală, de înţelegere şi utilizare corectă a semnificaţiilor structurilor verbale orale. Totodată, prin activităţile desfăşurate, ne propunem să dezvoltăm creativitatea
+                                şi expresivitatea limbajului oral şi să educăm exprimarea corectă din punct de vedere fonetic, lexical şi sintactic a celor mici).</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section> -->
     </main>
     <script src="function.js"></script>
 </body>
