--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
             <div class="activitati">
                 <div class="first-activitate activitate">
                     <div class="poza-invatare">
-                        <img src="poze/classes-6.jpg" alt="">
+                        <img src="..poze/classes-6.jpg" alt="">
                     </div>
                     <div class="text-activitate">
                         <h3>Sternchengruppe – Kid And Future</h3>
@@ -1452,37 +1452,37 @@
             </div>
             <div class="container-poze-galerie">
                 <div class="container-poza-1 container-poza-img">
-                    <img src="/poze/poza1.jpg" alt="">
+                    <img src="../poze/poza1.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza-2 container-poza-img">
-                    <img src="/poze/poza2.jpg" alt="">
+                    <img src="../poze/poza2.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza-3 container-poza-img">
-                    <img src="/poze/poza3.jpg" alt="">
+                    <img src="../poze/poza3.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza-4 container-poza-img">
-                    <img src="/poze/poza4.jpg" alt="">
+                    <img src="../poze/poza4.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza5 container-poza-img">
-                    <img src="/poze/poza5.jpg" alt="">
+                    <img src="../poze/poza5.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza-6 container-poza-img">
-                    <img src="/poze/poza6.jpg" alt="">
+                    <img src="../poze/poza6.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
