--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <ul class="first-ul">
                     <li class="acasa"> <a href="">Acasa</a></li>
                     <li class="despre-noi">
-                        <a href="">Despre noi</a>
+                        <a href="" class="animatie-despre-noi">Despre noi</a>
                         <span></span>
                         <ul class="second-ul">
                             <div class="container-second-ul">
@@ -599,7 +599,7 @@
             <div class="activitati">
                 <div class="first-activitate activitate">
                     <div class="poza-invatare">
-                        <img src="..poze/classes-6.jpg" alt="">
+                        <img src="poze/classes-6.jpg" alt="">
                     </div>
                     <div class="text-activitate">
                         <h3>Sternchengruppe – Kid And Future</h3>
@@ -1799,11 +1799,11 @@ M19.995,21.1H7.448V3.373h12.547V21.1z"/>
     <footer class="second-footer">&copy;2021 Gradinita Taramul Zanelor,toate drepturile rezervate.
     </footer>
     <a href="" class="up">&uarr;</a>
-    <script src="animatiicopil.js"></script>
-    <script src="poze.js"></script>
-    <script src="animatii.js"></script>
-    <script src="domeniiStudiu.js"></script>
-    <script src="function.js"></script>
+    <script src="js/animatiicopil.js"></script>
+    <script src="js/poze.js"></script>
+    <script src="js/animatii.js"></script>
+    <script src="js/domeniiStudiu.js"></script>
+    <script src="js/function.js"></script>
 
 
 
