--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@
             </div>
             <div class="container-poze-galerie">
                 <div class="container-poza-1 container-poza-img">
-                    <img src="../poze/poza1.jpg" alt="">
+                    <img src="/poze/poza1.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
