--- a/index.html
+++ b/index.html
@@ -1482,7 +1482,7 @@
                     </div>
                 </div>
                 <div class="container-poza-6 container-poza-img">
-                    <img src="../poze/poza6.jpg" alt="">
+                    <img src="poze/poza6.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
