--- a/index.html
+++ b/index.html
@@ -1452,31 +1452,31 @@
             </div>
             <div class="container-poze-galerie">
                 <div class="container-poza-1 container-poza-img">
-                    <img src="/poze/poza1.jpg" alt="">
+                    <img src="poze/poza1.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza-2 container-poza-img">
-                    <img src="../poze/poza2.jpg" alt="">
+                    <img src="poze/poza2.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza-3 container-poza-img">
-                    <img src="../poze/poza3.jpg" alt="">
+                    <img src="poze/poza3.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza-4 container-poza-img">
-                    <img src="../poze/poza4.jpg" alt="">
+                    <img src="poze/poza4.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
                 </div>
                 <div class="container-poza5 container-poza-img">
-                    <img src="../poze/poza5.jpg" alt="">
+                    <img src="poze/poza5.jpg" alt="">
                     <div class="plus-container">
                         <p>&#43;</p>
                     </div>
